build: v1.5.2; fix: spotify favorites playlist not showing in Favorites page until the refresh button is clicked (closes #21); refactor: favorites logic

--- a/src/styles/css/helpers.css
+++ b/src/styles/css/helpers.css
@@ -22,6 +22,10 @@
 	width: 156px;
 }
 
+.spin {
+	animation: spin 500ms infinite ease-out reverse;
+}
+
 @keyframes spin {
 	0% {
 		transform: rotate(0deg);
